--- a/src/applications/gi/sass/gi.scss
+++ b/src/applications/gi/sass/gi.scss
@@ -130,9 +130,8 @@
     padding: 0;
     margin-right: 0;
   }
-  .learn-more-bold-text::part(button){
+  .learn-more-bold-text::part(button) {
     font-weight: bold;
-
   }
 
   .remove-btn::part(button) {
@@ -321,27 +320,28 @@
 .inst-remove-btn::part(button) {
   background-color: transparent;
 }
-.search-tabs{
+.search-tabs {
   padding-top: 10px;
   margin-top: 0;
 }
-.search-tabs::part(button), .mob-search-tab::part(button){
+.search-tabs::part(button),
+.mob-search-tab::part(button) {
   background: transparent;
   color: rgb(117, 117, 117);
   font-size: 25px;
   outline: none;
   border: 0;
 }
-.tab-active::part(button){
+.tab-active::part(button) {
   color: rgb(61, 69, 81);
 }
-.mob-search-tab::part(button){
+.mob-search-tab::part(button) {
   color: rgb(61, 69, 81);
   font-size: 1rem;
   width: fit-content;
   padding: 0;
 }
-.accordions-btns::part(button){
+.accordions-btns::part(button) {
   background: transparent;
   color: rgb(27, 27, 27);
   font-size: 1.2rem;
@@ -350,7 +350,5 @@
   width: fit-content;
   padding: 0;
   line-height: 1.5;
- text-align: left;
-
+  text-align: left;
 }
-
