[#188] Updates to prototype from AT pilot (#32941)
* Made updates to post-study page

* Fixed card sizing for mobile, added task tabs nav bar in post-study page

* Fixed e2e orange task test

* Changed NY to New York in orange task

* Fixed orange task e2e test

* User session updates, fixed progress bar in task gray

* Updated pattern 2 tests to reflect profile info changes

* Fixed pattern 1 e2e tests to reflect profile info changes

* make additional info indented in post-study Orange section

---------

Co-authored-by: Belle P <belle@Belle-Poopongpanit.local>
Co-authored-by: Adam Whitlock <8332986+adamwhitlock1@users.noreply.github.com>

--- a/src/applications/_mock-form-ae-design-patterns/sass/custom.scss
+++ b/src/applications/_mock-form-ae-design-patterns/sass/custom.scss
@@ -90,11 +90,13 @@ div.progress-box.progress-box-schemaform > div.form-panel > div > va-card {
 
 // post study page
 #locked-card {
-  width: 21rem;
+  @include media($medium-screen) {
+    width: 21rem;
+  }
 }
 
 #gray-locked-card {
+  @include media($medium-screen) {
   width: 23rem;
+  }
 }
-
-
