96497 - updating test ids

--- a/src/applications/accredited-representative-portal/components/POARequestsTable/POARequestsTable.scss
+++ b/src/applications/accredited-representative-portal/components/POARequestsTable/POARequestsTable.scss
@@ -1,6 +1,6 @@
 @import "~@department-of-veterans-affairs/css-library/dist/tokens/scss/variables";
 
-.poa-requests {
+.poa-request {
   &__list {
     list-style-type: none;
     padding: 0;
