--- a/src/applications/gi/sass/partials/_gi-search-controls.scss
+++ b/src/applications/gi/sass/partials/_gi-search-controls.scss
@@ -3,42 +3,12 @@
   border-left: solid var(--vads-color-base-lightest);
   border-right: solid var(--vads-color-base-lightest);
 }
-.update-results,
-.update-results-2 {
+.update-results {
   background-color: var(--vads-color-base-lightest);
 }
-.update-results-2 {
-height: auto;
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-box-sizing: border-box;
-width: 100%;
-padding-inline: 1.5em;
-padding-bottom: 0.625rem;
+
 .update-results-button-after{
-  width: 100%;
-  max-width: 400px;
-  margin-bottom: 0.5em;
-  background-color: var(--vads-color-primary);
-    color: var(--vads-color-white);
-    border: none;
     border-radius: 5px;
-    box-sizing: border-box;
-    text-align: center;
-    margin: 0.625rem 20px 8px 20px;
-
-}
-.clear-filters-button-after{
-  width: 100%;
-  max-width: 400px;
-  background-color: transparent;
-  color: var(--vads-color-primary);
-  box-sizing: border-box;
-  text-align: center;
-  margin-inline: 20px;
-
 }
 .update-results-button-after::part(button){
   width: 100%;
@@ -46,12 +16,11 @@ padding-bottom: 0.625rem;
 .clear-filters-button-after::part(button){
   width: 100%;
 }
-}
 .update-results-header {
   margin-top: -0.04em;
 }
 
-.update-results-button,
+
 .clear-filters-btn {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
@@ -161,18 +130,6 @@ padding-bottom: 0.625rem;
 .reset-search-small-screen::part(button){
   width: 100%;
 }
-.update-results-button{
-  @media screen and (max-width:768px){
-    width: 100%;
-    margin: 0 0 10px 0;
-    padding: 0;
-  }
-}
 .accordion-mob-btns::part(button){
   line-height: 1.5;
 }
-.update-results-small-screen{
-  width: 100%;
-  margin-top: 1rem;
-}
-
