edm-306 search flow updates

--- a/src/applications/gi/sass/gi.scss
+++ b/src/applications/gi/sass/gi.scss
@@ -294,3 +294,21 @@
   list-style: none;
   padding-left: 0;
 }
+
+.search-container {
+  va-text-input::part(input) {
+    width: 100%;
+    min-width: 576px;
+  }
+
+  @media (max-width: 1024px) {
+    va-text-input::part(input) {
+      min-width: 420px;
+    }
+  }
+  @media (max-width: 480px) {
+    va-text-input::part(input) {
+      min-width: 100%;
+    }
+  }
+}
