--- a/src/applications/benefit-eligibility-questionnaire/sass/benefit-eligibility-questionnaire.scss
+++ b/src/applications/benefit-eligibility-questionnaire/sass/benefit-eligibility-questionnaire.scss
@@ -109,3 +109,11 @@
     padding-left: 0;
   }
 }
+
+.blue-heading {
+  padding: 0.5rem 1rem;
+  color: var(--vads-color-white);
+  background: var(--vads-color-primary-darker);
+  height: 26px;
+  margin: -16px;
+}
