mhv-61930 added spinner and filename

--- a/src/applications/mhv-medical-records/sass/medical-records.scss
+++ b/src/applications/mhv-medical-records/sass/medical-records.scss
@@ -144,6 +144,10 @@ va-loading-indicator {
   margin: initial;
 }
 
+#generating-ccd-indicator va-loading-indicator {
+  margin: 0px;
+}
+
 .initial-fhir-load {
   width: 300px;
 }
