--- a/src/applications/benefit-eligibility-questionnaire/sass/benefit-eligibility-questionnaire.scss
+++ b/src/applications/benefit-eligibility-questionnaire/sass/benefit-eligibility-questionnaire.scss
@@ -9,7 +9,14 @@
 .benefit-eligibility-questionnaire .confirmation-page p,
 .benefit-eligibility-questionnaire article p,
 .benefit-eligibility-questionnaire form > div:first-of-type * {
-  width: 75ch !important;
+  @media (min-width: $medium-screen) {
+    width: 75ch !important;
+  }
+}
+
+.benefit-card p {
+  white-space: pre-line;
+  max-width: 65ch;
 }
 
 .benefit-eligibility-questionnaire .schemaform-subtitle {
