Create cards with a blue header for time-sensitive benefits (#33059)
* Creating cards with a blue header for time-sensitive benefits

* Creating cards with a blue header for time-sensitive benefits

* Add Time Sensitive Banner to the Skillbridge and TAP benefit cards

* Creating cards with a blue header for time-sensitive benefits

* Creating cards with a blue header for time-sensitive benefits

* Creating cards with a blue header for time-sensitive benefits

* Creating cards with a blue header for time-sensitive benefits

* Add unit test

--- a/src/applications/benefit-eligibility-questionnaire/sass/benefit-eligibility-questionnaire.scss
+++ b/src/applications/benefit-eligibility-questionnaire/sass/benefit-eligibility-questionnaire.scss
@@ -116,3 +116,12 @@
     padding-left: 0;
   }
 }
+
+.blue-heading {
+  padding: 0.5rem 1rem;
+  color: var(--vads-color-white);
+  background: var(--vads-color-primary-darker);
+  height: 26px;
+  margin: -16px;
+  margin-bottom: 1rem;
+}
