Lc frontend build part 4 (#33184)
* update route handling

* Establish initial UI for lce keyword search

* Wire UI and redux to fetch and display typeahead suggestions

* consolidate L&C routes

* refactor lce search page -- fetch results on mount for autocomplete, filter suggestions on input change

* clear whitespace from filtered suggestions

* add style touchups,  refactor logic clearing input

* update ProgramList import

* update unit tests

* cleanup test

--- a/src/applications/gi/sass/gi.scss
+++ b/src/applications/gi/sass/gi.scss
@@ -317,6 +317,10 @@
   list-style: none;
   padding-left: 0;
 }
+
+.lc-name-search-input {
+  max-width: 30rem;
+}
 .inst-remove-btn::part(button) {
   background-color: transparent;
 }
