--- a/src/applications/benefit-eligibility-questionnaire/sass/benefit-eligibility-questionnaire.scss
+++ b/src/applications/benefit-eligibility-questionnaire/sass/benefit-eligibility-questionnaire.scss
@@ -85,7 +85,7 @@
   list-style-type: none !important;
 }
 
-@media (max-width: 40.063em) {
+@media (max-width: $small-screen) {
   .vads-l-grid-container {
 
     .progress-box {
