touchup styles | change license state if it differs from name selection

--- a/src/applications/gi/sass/gi.scss
+++ b/src/applications/gi/sass/gi.scss
@@ -327,6 +327,10 @@
   border-left: none;
 }
 
+.license-alert {
+  max-width: 30rem;
+}
+
 .reset-search {
   background-color: $color-white;
   color: $color-primary;
