fixes based on sitewide feedback
Signed-off-by: Micah Chiang <15097156+micahchiang@users.noreply.github.com>

--- a/src/platform/site-wide/sass/v1-grid.scss
+++ b/src/platform/site-wide/sass/v1-grid.scss
@@ -82,6 +82,17 @@ $breakpoints: (
 @import "~foundation-sites/scss/foundation/components/block-grid";
 //~~~~~~~
 
+// Overrides above order specifically for larger screens
+@include media($medium-screen) {
+  .usa-width-one-fourth {
+    margin-right: 2.35765%;
+    width: 23.23176%;
+  }
+  .usa-width-three-fourths {
+    width: 74.41059%;
+  }
+}
+
 // Grid container
 .vads-l-grid-container,
 .vads-l-grid-container--full {
