--- a/src/platform/site-wide/sass/shame.scss
+++ b/src/platform/site-wide/sass/shame.scss
@@ -645,6 +645,13 @@ div[data-widget-type="events"] {
   height: 59px;
   width: 264px;
 }
+/* ~~~ Used on some static pages such as /search */
+.highlight,
+.va-h-ruled {
+  border-bottom: 3px solid $color-primary;
+  padding-bottom: 0.25em;
+  font-weight: 700;
+}
 
 // foundation/global.scss sets display and vertical align on img tags. This is most obviously seen in the footer image
 // in content-build
