--- a/src/applications/_mock-form-ae-design-patterns/sass/custom.scss
+++ b/src/applications/_mock-form-ae-design-patterns/sass/custom.scss
@@ -74,11 +74,7 @@ div.progress-box.progress-box-schemaform > div.form-panel > div > va-card {
   opacity: 1;
 }
 
-// fixes for patter 2 Orange task
-#root_view\:editNavigation-label {
-  display: none !important;
-}
-
+// fixes for pattern 2 Orange task
 [data-location="2/task-orange/applicant-information"] {
   .schemaform-chapter-progress {
     padding-left: 0;
