Edm 363 update lce UI (#33304)
* Align header for mobile | display result count beside to keyword suggestion

* Align cancel icon styles with search input | reduce number of typeahed suggestions dipslayed

* touchup styles | change license state if it differs from name selection

* slot conditional alert into dropdown label

* set state filter field to all when switching to certification category type

* filter typeahead suggestions based on filter options

* update filter options based on typeahead suggestion selected

* rename functions more clearly |  correct state managment for filters when clearing input

* cleanup

* update results to va-card component

* enable routing for new lce result info page

* align breadcrumbs with result details url

* cleanup

* delete unit test for unused component

* update unit test for helper function

--- a/src/applications/gi/sass/gi.scss
+++ b/src/applications/gi/sass/gi.scss
@@ -296,15 +296,6 @@
   }
 }
 
-.lc-dropdown-filter {
-  max-width: 30rem;
-}
-
-.lc-filter-options {
-  padding: 0.5rem;
-  margin: 0;
-}
-
 .provider-info-container > span {
   gap: 1rem;
 }
@@ -318,12 +309,32 @@
   padding-left: 0;
 }
 
-.lc-name-search-input {
+.lc-dropdown-filter {
   max-width: 30rem;
 }
+
+.lc-clear {
+  border: 1px solid $color-gray-dark;
+  border-left: none;
+}
+
+.lc-card-subheader {
+  text-transform: capitalize;
+}
+
+.license-alert {
+  max-width: 30rem;
+}
+
+.reset-search {
+  background-color: $color-white;
+  color: $color-primary;
+}
+
 .inst-remove-btn::part(button) {
   background-color: transparent;
 }
+
 .search-container {
   va-text-input::part(input) {
     width: 100%;
