--- a/src/applications/accredited-representative-portal/sass/POARequestsCard.scss
+++ b/src/applications/accredited-representative-portal/sass/POARequestsCard.scss
@@ -38,6 +38,10 @@
         margin-bottom: 0;
         margin-right: 5px;
       }
+
+      &--expiry {
+        margin-left: 3px;
+      }
     }
   }
 }
