--- a/src/applications/travel-pay/sass/travel-pay.scss
+++ b/src/applications/travel-pay/sass/travel-pay.scss
@@ -49,12 +49,12 @@ h2#pagination-info {
   }
 }
 
-.claims-controller-title {
-  font-size: 4rem;
-  font-weight: 700;
-}
+// .claims-controller-title {
+//   font-size: 4rem;
+//   font-weight: 700;
+// }
 
-.claim-details-breadcrumb-wrapper {
+.travel-pay-breadcrumb-wrapper {
   display: flex;
   align-items: center;
 
