--- a/src/platform/site-wide/sass/modules/_m-overrides.scss
+++ b/src/platform/site-wide/sass/modules/_m-overrides.scss
@@ -2,3 +2,5 @@
 
 $font-path: "~uswds/src/fonts";
 $image-path: "~uswds/src/img";
+$formation-image-path: "~@department-of-veterans-affairs/formation/assets/img";
+$formation-font-path: "~@department-of-veterans-affairs/formation/assets/fonts";
