--- a/src/applications/mhv-landing-page/sass/mhv-landing-page.scss
+++ b/src/applications/mhv-landing-page/sass/mhv-landing-page.scss
@@ -120,6 +120,11 @@ $anchor-font-size: 1.25rem; // == 20px
     border-left-color: var(--vads-color-warning);
   }
 
+  &.mhv-u-reg-alert-error {
+    background-color: var(--vads-color-error-lighter);
+    border-left-color: var(--vads-color-error);
+  }
+
   va-icon {
     position: absolute;
     left: 12px;
