vebt-840 fixed data sent to backend and show percetage in review page

--- a/src/applications/edu-benefits/10216/sass/10216-edu-benefits.scss
+++ b/src/applications/edu-benefits/10216/sass/10216-edu-benefits.scss
@@ -5,3 +5,10 @@
 @import "~@department-of-veterans-affairs/css-library/dist/stylesheets/modules/m-modal";
 @import "~@department-of-veterans-affairs/css-library/dist/stylesheets/modules/m-omb-info";
 @import "../../../../platform/forms/sass/m-form-confirmation";
+
+
+.schemaform-field-template {
+    &:has(label[id="root_studentRatioCalcChapter_studentPercentageCalc_calculatedPercentage-label"]) {
+        display: none;
+    }
+}
