--- a/src/applications/accredited-representative-portal/sass/POARequestSearchDetails.scss
+++ b/src/applications/accredited-representative-portal/sass/POARequestSearchDetails.scss
@@ -2,6 +2,10 @@
   border: none;
 }
 
+.poa-request-search__date-field {
+  margin-top: 24px;
+}
+
 ul.poa-request-details-list {
   list-style: none;
   list-style-type: none;
