arp/small_css_tweaks_claimant_search - more css fixes

--- a/src/applications/accredited-representative-portal/sass/POARequestSearchDetails.scss
+++ b/src/applications/accredited-representative-portal/sass/POARequestSearchDetails.scss
@@ -29,3 +29,11 @@ a.vads-c-action-link--gray::before {
   background-color: var(--vads-color-gray-warm-dark);
   border-radius: 50%;
 }
+
+.claimant-search-showing-results {
+  margin: 24px 0;
+}
+
+.claimant-search-recent-representation-requests {
+  margin: 16px 0;
+}
