arp/small_css_tweaks_claimant_search - changed margin bottom from 16px to 8px

--- a/src/applications/accredited-representative-portal/sass/POARequestSearchDetails.scss
+++ b/src/applications/accredited-representative-portal/sass/POARequestSearchDetails.scss
@@ -35,5 +35,5 @@ a.vads-c-action-link--gray::before {
 }
 
 .claimant-search-recent-representation-requests {
-  margin: 16px 0;
+  margin: 16px 0 8px 0;
 }
