--- a/src/applications/accredited-representative-portal/sass/POARequestSearchDetails.scss
+++ b/src/applications/accredited-representative-portal/sass/POARequestSearchDetails.scss
@@ -37,3 +37,9 @@ a.vads-c-action-link--gray::before {
 .claimant-search-recent-representation-requests {
   margin: 16px 0 8px 0;
 }
+
+.poa-request__list--search {
+  .poa-request__card {
+    padding: 24px 20px;
+  }
+}
