arp/small_css_tweaks_claimant_search - fixed poa-request__card-title margin top

--- a/src/applications/accredited-representative-portal/sass/POARequestSearchDetails.scss
+++ b/src/applications/accredited-representative-portal/sass/POARequestSearchDetails.scss
@@ -42,4 +42,7 @@ a.vads-c-action-link--gray::before {
   .poa-request__card {
     padding: 24px 20px;
   }
+  .poa-request__card-title {
+    margin-top: 12px;
+  }
 }
