[CST] 107783 Remove Layout Shifting for Loading the Your Claims Page (#36023)
* Remove layout shifts caused by web components rendering

Adds containers the size of the 3 web components above the fold to hold the space for the web components as they load

* Exploration: Remove scroll to top; change focus from breadcrumb to h1

* Add feature toggle to focus behavior and containers

* Update on-this-page-container after Your travel claims addition

* Remove unneeded empty line addition

* Refactor YourClaimsPageV2 to improve focus handling and conditional rendering

* Revert reordering a feature flag

* Add feature flag to local-dev-mock-api

* Implement web component loading states to prevent layout shift

Add loading state management for web components (va-breadcrumbs, va-on-this-page, va-additional-info)
that displays placeholder styling while components render their shadow DOM content. Uses polling
approach to detect when components are ready and removes loading styles accordingly.

Changes:
- Add webComponentsLoading state and polling logic in YourClaimsPageV2
- Create getLoadingClassName helper for conditional CSS classes
- Add web-component-loading CSS class with placeholder styling
- Update container heights to prevent layout shift during loading

* Revert "Implement web component loading states to prevent layout shift"

This reverts commit fc5d57a222226a563dbae9d3e45b586995e1fa54.

* Simplify focusElement selector since only 1 h1 allowed per page

* Update loading containers to more specific and semantic class name

--- a/src/applications/claims-status/sass/claims-status.scss
+++ b/src/applications/claims-status/sass/claims-status.scss
@@ -6,6 +6,19 @@
 @import "~@department-of-veterans-affairs/css-library/dist/stylesheets/modules/va-pagination";
 @import "~@department-of-veterans-affairs/css-library/dist/stylesheets/modules/m-modal";
 
+.breadcrumbs-loading-container {
+  min-height: 4rem;
+}
+
+.on-this-page-loading-container {
+  min-height: 350px;
+}
+
+.additional-info-loading-container {
+  min-height: 1.625rem;
+  margin: 1rem 0;
+}
+
 .claim-list {
   margin-bottom: 2em;
 }
