--- a/src/applications/accredited-representative-portal/sass/POARequestDetails.scss
+++ b/src/applications/accredited-representative-portal/sass/POARequestDetails.scss
@@ -57,8 +57,8 @@
   }
 
   &__divider {
-    border-bottom: 1px solid $vads-color-base-light;
-    width: 100%;
+    border-bottom: 1px solid var(--vads-color-gray-light);
+    width: 700px;
     margin: 28px 0;
     display: flex;
   }
