--- a/src/applications/accredited-representative-portal/sass/POARequestSearchDetails.scss
+++ b/src/applications/accredited-representative-portal/sass/POARequestSearchDetails.scss
@@ -2,6 +2,10 @@
   border: none;
 }
 
+.poa-request-search__date-field {
+  margin-top: 24px;
+}
+
 ul.poa-request-details-list {
   list-style: none;
   list-style-type: none;
@@ -24,4 +28,21 @@ a.vads-c-action-link--gray::before {
   content: url(../../proxy-rewrite/assets/right-arrow.svg);
   background-color: var(--vads-color-gray-warm-dark);
   border-radius: 50%;
+}
+
+.claimant-search-showing-results {
+  margin: 24px 0;
+}
+
+.claimant-search-recent-representation-requests {
+  margin: 16px 0 8px 0;
+}
+
+.poa-request__list--search {
+  .poa-request__card {
+    padding: 24px 20px;
+  }
+  .poa-request__card-title {
+    margin-top: 12px;
+  }
 }
