--- a/src/applications/accredited-representative-portal/sass/accredited-representative-portal.scss
+++ b/src/applications/accredited-representative-portal/sass/accredited-representative-portal.scss
@@ -290,7 +290,7 @@
   width: 100%;
 }
 .yellow-warning {
-  color: var(--vads-color-yellow);
+  color: var(--vads-color-warning-dark);
 }
 hr.claimant-search {
   margin: 16px 0;
