--- a/src/applications/dispute-debt/sass/dispute-debt.scss
+++ b/src/applications/dispute-debt/sass/dispute-debt.scss
@@ -1,3 +1,4 @@
+@import "~@department-of-veterans-affairs/css-library/dist/tokens/scss/variables";
 @import "~@department-of-veterans-affairs/css-library/dist/stylesheets/modules/m-process-list";
 @import "~@department-of-veterans-affairs/css-library/dist/stylesheets/modules/m-form-process";
 @import "../../../platform/forms/sass/m-schemaform";
@@ -50,4 +51,6 @@
   }
 }
 
-
+#contact-informationHeader {
+  font-size: $font-size-h2;
+}
