114395 - updating awaiting receipt icon

--- a/src/applications/accredited-representative-portal/sass/SubmissionsPage.scss
+++ b/src/applications/accredited-representative-portal/sass/SubmissionsPage.scss
@@ -63,6 +63,10 @@
   &__awaiting {
     display: flex;
     padding: 0 !important;
+
+    .submissions__inline-status-icon.submissions__card-check {
+      color: $vads-color-base;
+    }
   }
 }
 .submission {
