MBMS-58074 Covers all flows

--- a/src/applications/pre-need-integration/sass/pre-need.scss
+++ b/src/applications/pre-need-integration/sass/pre-need.scss
@@ -267,8 +267,8 @@ article#form-4010007[data-location^="service-periods-"] .vads-u-color--gray-dark
   color: var(--vads-color-base) !important;
 }
 
-article#form-4010007[data-location="applicant-military-name"],
-article#form-4010007[data-location="applicant-military-name-preparer"]{
+article#form-4010007[data-location^="applicant-military-name"],
+article#form-4010007[data-location^="sponsor-military-name"]{
 .schemaform-first-field .schemaform-label {
   padding-top: 3em;
 }}
